[package]
name = "ios-fonts-configurator"
version = "0.1.0"
edition = "2021"
authors = ["Erning"]
description = "A command-line tool to generate .mobileconfig files for iOS font installation"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
anyhow = "1.0"
